created second rough draft about me

--- a/idex.html
+++ b/idex.html
@@ -5,13 +5,13 @@
 	<title>All about Cody</title>
 </head>
 <body>
-	<h1>Just A few things about me</h1>
+	<h1>Just A Few Things About Me</h1>
 	<div>
 		<p>I enjoy making and producing music</p>
 		<p>Snowboarding is also another thing I enjoy</p>
 	</div>
 	<div>
-		<img src="https://drive.google.com/drive/folders/1MY0TMU4QthhrBvUg16wBAJzaK5_Qe4KU">
+		<img src="./img.jpg" alt="SNOW!!">
 	</div>
 </body>
 </html>
