I added some css styles and added superpwowers list.

--- a/idex.html
+++ b/idex.html
@@ -3,13 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>All about Cody</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>Just A Few Things About Me</h1>
 	<div>
-		<p>I enjoy making and producing music</p>
-		<p>Snowboarding is also another thing I enjoy</p>
+		<li>I enjoy making and producing music</li>
+		<li>Snowboarding is also another thing I enjoy</li>
+		<li>I can make music using a snowboard</li>
 	</div>
+	<h1><span class = 'redText'> Also Have Super Powers!!!!</span></h1>
+		<li><span class = 'blueText'> Snow Manipulation (I respect the seasons)</span></li>
+		<li><span class = 'blueText '>Manipulation (MY MUSIC IS AWESOME)</span></li>
+		<li><span class = 'blueText'>I have a weapon mastery with snowboards.</span></li>
 	<div>
 		<img src="./img.jpg" alt="SNOW!!">
 	</div>
