I added some css styles and added superpwowers list.

--- a/idex.html
+++ b/idex.html
@@ -13,8 +13,8 @@
 		<li>I can make music using a snowboard</li>
 	</div>
 	<h1><span class = 'redText'> Also Have Super Powers!!!!</span></h1>
-		<li><span class = 'blueText'> Snow Manipulation (I respect the seasons)</span></li>
-		<li><span class = 'blueText '>Manipulation (MY MUSIC IS AWESOME)</span></li>
+		<li><span class = 'blueText'>Snow Manipulation (I respect the seasons)</span></li>
+		<li><span class = 'blueText '>Sound Manipulation (MY MUSIC IS AWESOME)</span></li>
 		<li><span class = 'blueText'>I have a weapon mastery with snowboards.</span></li>
 	<div>
 		<img src="./img.jpg" alt="SNOW!!">
